# playbox-rs

./: .gitignore  BRAINSTORM.md  Cargo.toml  TODO.md
assets/: scene.blend  scene.toy
resource/shaders/: basic.vs.glsl  bloom.cs.glsl  downsample.cs.glsl  fog.cs.glsl  fullscreen.vs.glsl  hdr_to_ldr.cs.glsl  image.cs.glsl  post.cs.glsl  repair.cs.glsl  room.fs.glsl  room.vs.glsl  standard-room.vs.glsl  test.cs.glsl  test.fs.glsl  test.vs.glsl  text.fs.glsl  upsample.cs.glsl
resource/toys/: basic.blend  basic.toy  deccer.toy
resource/worlds/: bad.world  default.world  generated.world  lighting-test.world  world2.world
src/: aabb2_ext.rs  audio.rs  balls.rs  console.rs  controller.rs  dungeon.rs  editor.rs  executor.rs  game_scene.rs  global_controller.rs  glyph_cache.rs  intersect.rs  main.rs  main_menu.rs  menu.rs  mesh.rs  mesh_builder_test.rs  message_bus.rs  model.rs  platformer3d.rs  shaders.rs  sprites.rs  toy_draw.rs  ui.rs  view.rs  views.rs  vignette.rs  world.rs  world_view.rs
src/audio/: music.rs  sfx.rs
src/controller/: audio_test.rs  camera.rs  debug.rs  debug_camera.rs  gem.rs  global.rs  player.rs
src/editor/: commands.rs  inspector.rs  undo.rs  viewport.rs  world_editor.rs
src/menu/: menu_builder.rs  menu_painter.rs
src/message_bus/: test.rs
src/model/: blob_shadow.rs  camera.rs  debug.rs  environment.rs  hud.rs  interactions.rs  player.rs  processed_world.rs  progress.rs  scene.rs  world.rs
src/platformer3d/: controller.rs  views.rs
src/shaders/: balls_pattern.frag.glsl  balls_pattern.vert.glsl  basic_textured.frag.glsl  (+16 more)
(+73 files in other folders)
