[package]
name = "playbox-rs"
version = "0.0.0"
edition = "2021"


[dependencies]
slotmap = "1.0.6"
fontdue = "0.8"
serde = "1.0"
serde_json = "1.0"
bitflags = "2.6"


[dependencies.tokio]
version = "1.33.0"
features = ["sync", "time", "rt", "rt-multi-thread", "macros"]



[dependencies.toybox]
git = "https://github.com/manpat/toybox-rs.git"
features = ["tracy"]
